Fix for custom scrollbars. UPDATED.

--- a/options.css
+++ b/options.css
@@ -1,7 +1,7 @@
 /*[[ColorScheme]]*/
 /* AppChan: */
 	::-webkit-scrollbar-thumb {
-		border-color: #2c2c2c !important;
+		border: #2c2c2c !important;
 	}
 
 	::-webkit-scrollbar-thumb:hover {
@@ -21,7 +21,7 @@
 	::-webkit-scrollbar-thumb {
 		background: #262626;
 	}
-	
+
 	*,
 	#qr input[type="checkbox"],
 	#updater #count:not(.new):after,
@@ -58,11 +58,11 @@
 	input[type="file"]::-webkit-file-upload-button {
 		color: #666 !important;
 	}
-	
+
 	.doubledash a {
 		color: #222 !important;
 	}
-	
+
 	.doubledash a:hover {
 		color: #555 !important;
 	}
@@ -80,7 +80,7 @@
 	a:hover .postertrip {
 		color: #444 !important;
 	}
-	
+
 	a.backlink {
 		color: #4f5f8f !important;
 	}
@@ -93,7 +93,7 @@
 	.unkfunc {
 		color: #789922 !important;
 	}
-	
+
 	#boards h3,
 	#boardsMenu,
 	#ft li,
@@ -121,12 +121,15 @@
 	td.reply,
 	td.replyhl,
 	textarea,
-	input[type="checkbox"],
+	input[type="checkbox"] {
+		background-color: #333 !important;
+	}
+
 	scrollbar,
 	scrollcorner {
 		background-color: #333 !important;
 	}
-	
+
 	#header,
 	#options input,
 	#options input[type=checkbox],
@@ -202,13 +205,13 @@
 	input[type="file"]>input[type="button"]:hover {
 		background-color: #363636 !important;
 	}
-	
+
 	input[type="submit"],
 	#com_submit,
 	input[type="file"]>input[type="button"] {
 		background-color: #303030 !important;
 	}
-	
+
 	thumb:hover {
 		background: #3f3f3f;
 	}
@@ -236,7 +239,7 @@
 		background-color: rgba(255,255,255,.5) !important;
 		color: #000 !important;
 	}
-	
+
 	.postarea .postblock b,
 	#qr .postblock b,
 	#quickrep .postblock b,
@@ -244,7 +247,7 @@
 	#maxchars {
 		color: rgba(255,255,255,0.2) !important;
 	}
-	
+
 	.postarea tr:nth-child(4)>.postblock>b:after {
 		color: rgba(255,255,255,0.2) !important;
 	}
@@ -314,14 +317,14 @@
 	table.reply[style^="clear: both"] {
 		border: none !important;
 	}
-	
+
 	form[name="delform"]>div:not(.thread) select {
 		margin: 1px 0 0 0 !important;
 		height: 15px !important;
 	}
 /* Zenburned */
 	::-webkit-scrollbar-thumb {
-		border-color: #4f4f4f !important;
+		border: #4f4f4f !important;
 		background: #3f3f3f;
 	}
 
@@ -338,7 +341,7 @@
 	::-webkit-scrollbar-resizer {
 		background: #3a3a39;
 	}
-	
+
 	thumb:active {
 		background: #111 !important;
 	}
@@ -350,16 +353,16 @@
 
 	scrollbar,
 	scrollcorner {
-		background-color: #3a3a39 !important;
+		background: #3a3a39 !important;
 	}
-	
+
 	*,
 	html,
 	body {
 		background-color: #3f3f3f !important;
 	}
-	
-	
+
+
 	#updater #count:not(.new):after,
 	input[type="checkbox"],
 	form[name="delform"] div:not(.thread) label:after,
@@ -369,7 +372,7 @@
 	body {
 		color: #efefef !important;
 	}
-	
+
 	div.logo,
 	div.logo *,
 	form,
@@ -380,7 +383,7 @@
 	#thread_filter>div {
 		background-color: transparent !important;
 	}
-	
+
 	.reply,
 	.reply>*,
 	.reply>*>*,
@@ -392,7 +395,7 @@
 	form[name="delform"] .replyhl td {
 		border: 1px solid #4f4f4f !important;
 	}
-	
+
 	td.reply,
 	td.replyhl,
 	#options,
@@ -401,7 +404,7 @@
 	#boardsMenu {
 		border: 0 !important;
 	}
-	
+
 	.boxcontent dd,
 	#threadwatcher .postblock {
 		border-top-color: #4f4f4f !important;
@@ -417,7 +420,7 @@
 	a {
 		color:#efdcbc !important;
 	}
-	
+
 	a:hover {
 		color: #f8f893 !important;
 	}
@@ -435,8 +438,8 @@
 	.postertrip {
 		color: #8cd0d3 !important;
 	}
-	
-	.unkfunc {	
+
+	.unkfunc {
 		color: #7f9f7f !important;
 	}
 
@@ -476,7 +479,7 @@
 	select>* {
 		border: 0!important;
 	}
-	
+
 	.postarea td>input[name="upfile"] {
 		margin: 2px 0 0 0 !important;
 	}
@@ -495,7 +498,7 @@
 	div[id^=qr] .recaptcha_image_cell>center>#recaptcha_image img {
 		width: 298px !important;
 	}
-	
+
 	form[name="delform"]>div:not(.thread) select {
 		margin: 0 0 0 0 !important;
 		height: 17px !important;
@@ -517,7 +520,7 @@
 	::-webkit-scrollbar-track-piece,
 	::-webkit-scrollbar-corner,
 	::-webkit-scrollbar-resizer {
-		background-color: #686a99 !important;
+		background: #686a99 !important;
 	}
 
 	::-webkit-scrollbar-thumb {
@@ -563,12 +566,12 @@
 		color: #313C5a !important;
 		font-weight: 800;
 	}
-	
+
 	.commentpostername span[style="color:#800080"],
 	b[style="color:red;"] {
 		color: #000 !important;
 	}
-	
+
 	table .commentpostername a.linkmail[href$="sage"]:after {
 		color: #000 !important;
 		font-weight: 700;
@@ -585,7 +588,7 @@
 	.doubledash a {
 		color: #313C5a !important;
 	}
-	
+
 	.doubledash a:hover {
 		color: #1e1f3d !important;
 	}
@@ -634,7 +637,7 @@
 		color: #313C5a;
 		text-shadow: -1px -1px 2px #5f608b, 1px 1px 2px #5f608b, 1px -1px 2px #5f608b, -1px 1px 2px #5f608b;
 	}
-	
+
 	#boards h3,
 	#boardsMenu,
 	#ft li,
@@ -661,12 +664,15 @@
 	td.postblock,
 	td.reply,
 	textarea,
-	input[type="checkbox"],
-	scrollbar,
-	scrollcorner {
+	input[type="checkbox"] {
 		background-color: #686a99 !important;
 	}
-	
+
+	scrollbar,
+	scrollcorner {
+		background: #686a99 !important;
+	}
+
 	#header,
 	#options input,
 	#options input[type=checkbox],
@@ -692,7 +698,7 @@
 	table.reply[style^="clear: both"] {
 		background-color: #5f608b !important;
 	}
-	
+
 	td.reply,
 	td.replyhl {
 		color: #313C5a !important;
@@ -715,7 +721,7 @@
 	textarea:focus {
 		background-color: #5f608b !important;
 	}
-	
+
 	input[type="checkbox"] {
 		background: rgba(104,106,153,.4) !important;
 		border: 1px solid #313c5a !important;
@@ -739,7 +745,7 @@
 	#crntBoard {
 		border-right-color: #1e1f3d !important;
 	}
-	
+
 	thumb:hover {
 		background: #4f507b !important;
 	}
@@ -760,7 +766,7 @@
 		background-color: rgba(255,255,255,.5) !important;
 		color: #000 !important;
 	}
-	
+
 	.postarea .postblock b,
 	#qr .postblock b,
 	#quickrep .postblock b,
@@ -768,7 +774,7 @@
 	#maxchars {
 		color: #242949 !important;
 	}
-	
+
 	.postarea tr:nth-child(4)>.postblock>b:after {
 		color: #242949 !important;
 	}
@@ -811,7 +817,7 @@
 		-webkit-border-radius: 3px;
 		border-radius: 3px;
 	}
-	
+
 	select {
 		-moz-border-radius: 3px;
 		-webkit-border-radius: 3px;
@@ -844,7 +850,7 @@
 	div[id^=qr] .recaptcha_image_cell>center>#recaptcha_image img {
 		width: 298px !important;
 	}
-	
+
 	form[name="delform"]>div:not(.thread) select {
 		margin: 0 !important;
 		height: 17px !important;
@@ -853,7 +859,7 @@
 	::-webkit-scrollbar-thumb {
 		border: 1px solid #ccc;
 	}
-	
+
 	thumb {
 		-moz-appearance: none !important;
 		border: 1px #ccc solid;
@@ -903,7 +909,7 @@
 	.postarea tr:nth-child(4)>.postblock>b:after {
 		color: rgba(0,0,0,0.5) !important;
 	}
-	
+
 	#watcher .move,
 	#threadwatcher .postblock {
 		border-color: #fff !important;
@@ -912,7 +918,7 @@
 	#watcher .move {
 		border-bottom: 1px #fff solid !important;
 	}
-	
+
 	.postarea td>input[name="upfile"] {
 		margin: 1px 0 -1px -1px !important;
 	}
@@ -940,7 +946,7 @@
 	div[id^=qr] .recaptcha_image_cell>center>#recaptcha_image img {
 		width: 298px !important;
 	}
-	
+
 	form[name="delform"]>div:not(.thread) select {
 		margin: 0 !important;
 		height: 17px !important;
@@ -964,7 +970,7 @@ none
 	.pages {
 		position: fixed !important;
 	}
-	
+
 	.pages {
 		padding: 0 250px 0 0 !important;
 	}
@@ -976,7 +982,7 @@ none
 	#header {
 		position: absolute !important;
 	}
-	
+
 	.pages {
 		padding: 0 !important;
 	}
@@ -991,18 +997,18 @@ none
 		-moz-transition: right .3s ease-in-out 3s;
 		-o-transition: right .3s ease-in-out 3s;
 	}
-	
+
 	.postarea form:first-child:hover {
 		right: 2px !important;
 		-webkit-transition: right .3s linear;
 		-moz-transition: right .3s linear;
 		-o-transition: right .3s linear;
 	}
-	
+
 	.postarea tr:nth-child(4) {
 		height: 79px !important;
 	}
-	
+
 	.postarea textarea:focus {
 		position: fixed !important;
 		right: 2px !important;
@@ -1035,9 +1041,9 @@ none
 	#thread_filter>div:first-child  {
 		cursor: default !important;
 	}
-	
+
 	#thread_filter.autohide:hover {
-		width: 248px;		
+		width: 248px;
 	}
 
 	#thread_filter:not(.autohide) a[title="Auto-hide dialog box"]:after {
